// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table caption renders 1`] = `
.c0 {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c5 {
  font-size: 16px;
  line-height: 1.375;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c3 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  vertical-align: bottom;
}

.c2 {
  display: none;
}

.c1 {
  border-spacing: 0;
  border-collapse: collapse;
}

<div
  className="c0"
>
  <table
    className="c1"
  >
    <caption
      className="c2"
    >
      Caption
    </caption>
    <thead>
      <tr>
        <th
          className="c3"
          scope="col"
        >
          <div
            aria-label={undefined}
            className="c4"
            direction="column"
          >
            <span
              className="c5"
            >
              Name
            </span>
          </div>
        </th>
      </tr>
    </thead>
    <tbody />
  </table>
</div>
`;

exports[`Table columns renders 1`] = `
.c0 {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c4 {
  font-size: 16px;
  line-height: 1.375;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  border-bottom: solid 1px rgba(0,0,0,0.15);
  min-width: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  border-top: solid 1px rgba(0,0,0,0.15);
  min-width: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c2 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  vertical-align: bottom;
  width: 192px;
  max-width: 192px;
  overflow: hidden;
}

.c5 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  vertical-align: bottom;
}

.c7 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  vertical-align: top;
  width: 192px;
  max-width: 192px;
  overflow: hidden;
}

.c8 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  vertical-align: top;
}

.c1 {
  border-spacing: 0;
  border-collapse: collapse;
}

<div
  className="c0"
>
  <table
    className="c1"
  >
    <thead>
      <tr>
        <th
          className="c2"
          scope="col"
        >
          <div
            aria-label={undefined}
            className="c3"
            direction="column"
          >
            <span
              className="c4"
            >
              Name
            </span>
          </div>
        </th>
        <th
          className="c5"
          scope="col"
        >
          <div
            aria-label={undefined}
            className="c6"
            direction="column"
          >
            <span
              className="c4"
            >
              Flavor
            </span>
          </div>
        </th>
      </tr>
    </thead>
    <tbody />
    <tfoot>
      <tr>
        <th
          className="c7"
        />
        <th
          className="c8"
        >
          <div
            aria-label={undefined}
            className="c9"
            direction="column"
          >
            <span
              className="c4"
            >
              Flavor
            </span>
          </div>
        </th>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`Table data renders 1`] = `
.c0 {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c4 {
  font-size: 16px;
  line-height: 1.375;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c2 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  vertical-align: bottom;
}

.c5 {
  margin: 0;
  padding: 0;
}

.c1 {
  border-spacing: 0;
  border-collapse: collapse;
}

<div
  className="c0"
>
  <table
    className="c1"
  >
    <thead>
      <tr>
        <th
          className="c2"
          scope="col"
        >
          <div
            aria-label={undefined}
            className="c3"
            direction="column"
          >
            <span
              className="c4"
            >
              Name
            </span>
          </div>
        </th>
        <th
          className="c2"
          scope="col"
        >
          <div
            aria-label={undefined}
            className="c3"
            direction="column"
          >
            <span
              className="c4"
            >
              Flavor
            </span>
          </div>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th
          className="c2"
          scope="row"
        >
          <div
            aria-label={undefined}
            className="c3"
            direction="column"
          >
            <span
              className="c4"
            >
              Eric
            </span>
          </div>
        </th>
        <td
          className="c5"
          scope={undefined}
        >
          <div
            aria-label={undefined}
            className="c3"
            direction="column"
          >
            <span
              className="c4"
            >
              Coconut
            </span>
          </div>
        </td>
      </tr>
      <tr>
        <th
          className="c2"
          scope="row"
        >
          <div
            aria-label={undefined}
            className="c3"
            direction="column"
          >
            <span
              className="c4"
            >
              Chris
            </span>
          </div>
        </th>
        <td
          className="c5"
          scope={undefined}
        >
          <div
            aria-label={undefined}
            className="c3"
            direction="column"
          >
            <span
              className="c4"
            >
              Watermelon
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
